ECOSENT-2664 - Java 21